added row counter to steams own counter

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -1350,7 +1350,7 @@
       <div class="newmodal_content" style="max-height: 1477px;">
         <div id="steam_Inv_Loader_spin" class="waiting_dialog_throbber"></div>
         <div id="steam_Inv_Loader_Message">Please wait while all the history is being loaded...</div>
-        <div><span id="modal-loadHistory-rows">Rows added:</span> <span id="inventory_history_count">0</span></div>
+        <div><span id="modal-loadHistory-rows">Rows added:</span> <span id="inventory_history_count_rows">0</span></div>
         <div><span id="modal-loadHistory-loops">Loops done:</span> <span id="inventory_history_loop_count">0</span></div>
         <div><span id="modal-loadHistory-date">Loaded date:</span> <span id="inventory_history_load_date"></span></div>
         <div class="newmodal_buttons" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
