tog bort gammla data tags från html:en

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -200,27 +200,27 @@
               <div class="list-2">
                 <h3 id="modal-filterOptions-filterTitle" class="list-Title">Filters</h3>
                 <ul class="list2 filter-List">
-                  <li id="modal-filterOptions-data-caseOpened" data-main-tag="Unlocked a container" data-item-name-tag="Case Key"> Case Opened </li>
-                  <li id="modal-filterOptions-data-souvenirPackageOpened" data-main-tag="Unlocked a container" data-item-name-tag="Souvenir Package"> Souvenir Package Opened </li>
-                  <li id="modal-filterOptions-data-capsuleOpened" data-main-tag="Unlocked a container" data-item-name-tag="Capsule"> Capsule Opened </li>
-                  <li id="modal-filterOptions-data-medals" data-main-tag="Earned"> Medals </li>
-                  <li id="modal-filterOptions-data-storageUnit" data-main-tag="Moved to Storage Unit"> Storage Unit </li>
-                  <li id="modal-filterOptions-data-caseDrops" data-main-tag="Got an item drop"> Case Drops </li>
-                  <li id="modal-filterOptions-data-itemDrops" data-main-tag="Earned a new rank and got a drop"> Item Drops </li>
-                  <li id="modal-filterOptions-data-trades" data-main-tag="You traded with "> Trades </li>
-                  <li id="modal-filterOptions-data-containerOpened" data-main-tag="Unlocked a container"> Container Opened </li>
-                  <li id="modal-filterOptions-data-storePurchases" data-main-tag="Purchased from the store"> Store Purchases </li>
-                  <li id="modal-filterOptions-data-marketPurchases" data-main-tag="You purchased an item on the Community Market."> Market Purchases </li>
-                  <li id="modal-filterOptions-data-marketListingCreated" data-main-tag="You listed an item on the Community Market."> Market Created Listings </li>
-                  <li id="modal-filterOptions-data-marketListingRemoved" data-main-tag="You canceled a listing on the Community Market. The item was returned to you."> Market Removed Listings </li>
-                  <li id="modal-filterOptions-data-used" data-main-tag="Used"> Used </li>
-                  <li id="modal-filterOptions-data-souvenirDrop" data-main-tag="Earned a souvenir drop"> Souvenir drop </li>
-                  <li id="modal-filterOptions-data-tradeUps" data-main-tag="Crafted"> Trade ups </li>
-                  <li id="modal-filterOptions-data-stickerApplied" data-main-tag="Sticker applied"> Sticker applied </li>
-                  <li id="modal-filterOptions-data-stickerRemoved" data-main-tag="Sticker removed"> Sticker removed </li>
-                  <li id="modal-filterOptions-data-deletedItem" data-main-tag="You deleted"> Deleted Item </li>
-                  <li id="modal-filterOptions-data-unsealedGraffiti" data-main-tag="Unsealed"> Unsealed Graffiti </li>
-                  <li id="modal-filterOptions-data-missionReward" data-main-tag="Mission reward"> Mission Reward (Operations) </li>
+                  <li id="modal-filterOptions-data-caseOpened"> Case Opened </li>
+                  <li id="modal-filterOptions-data-souvenirPackageOpened"> Souvenir Package Opened </li>
+                  <li id="modal-filterOptions-data-capsuleOpened"> Capsule Opened </li>
+                  <li id="modal-filterOptions-data-medals"> Medals </li>
+                  <li id="modal-filterOptions-data-storageUnit"> Storage Unit </li>
+                  <li id="modal-filterOptions-data-caseDrops"> Case Drops </li>
+                  <li id="modal-filterOptions-data-itemDrops"> Item Drops </li>
+                  <li id="modal-filterOptions-data-trades"> Trades </li>
+                  <li id="modal-filterOptions-data-containerOpened"> Container Opened </li>
+                  <li id="modal-filterOptions-data-storePurchases"> Store Purchases </li>
+                  <li id="modal-filterOptions-data-marketPurchases"> Market Purchases </li>
+                  <li id="modal-filterOptions-data-marketListingCreated"> Market Created Listings </li>
+                  <li id="modal-filterOptions-data-marketListingRemoved"> Market Removed Listings </li>
+                  <li id="modal-filterOptions-data-used"> Used </li>
+                  <li id="modal-filterOptions-data-souvenirDrop"> Souvenir drop </li>
+                  <li id="modal-filterOptions-data-tradeUps"> Trade ups </li>
+                  <li id="modal-filterOptions-data-stickerApplied"> Sticker applied </li>
+                  <li id="modal-filterOptions-data-stickerRemoved"> Sticker removed </li>
+                  <li id="modal-filterOptions-data-deletedItem"> Deleted Item </li>
+                  <li id="modal-filterOptions-data-unsealedGraffiti"> Unsealed Graffiti </li>
+                  <li id="modal-filterOptions-data-missionReward"> Mission Reward (Operations) </li>
                 </ul>
               </div>
             </div>
