--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -1158,7 +1158,6 @@
     <div class="newmodal_content_border">
       <div class="newmodal_content" style="max-height: 1477px;">
         <div id="steam_filter_stats_alert_message">*WARNING - You have not loaded all your history. The following data will be incomplete*</div>
-        <div id="steam_filter_stats_message">DESC</div>
         <div class="stats_content_container">
           <div class="stats_list">
             <div>
@@ -1230,12 +1229,12 @@
             <div class="number_chart" id="general_window">
               <h1 id="stats-general-title">General Stats</h1>
               <div class="totStatBox_con_con">
-                <div class="totStatBox_con">
+                <div id="general_stats_open" class="totStatBox_con">
                   <span class="totStatBox" id="caseTot"><span id="stats-general-total-cases-opened">Total cases opened:</span> <span id="caseTotNum" class="numBox">0</span></span>
                   <span class="totStatBox" id="capTot"><span id="stats-general-total-capsules-opened">Total capsules opened:</span> <span id="capTotNum" class="numBox">0</span></span>
                   <span class="totStatBox" id="packTot"><span id="stats-general-total-packages-opened">Total packages opened:</span> <span id="packTotNum" class="numBox">0</span></span>
                 </div>
-                <div class="totStatBox_con">
+                <div id="general_stats_drops" class="totStatBox_con">
                   <span class="totStatBox" id="case2Tot"><span id="stats-general-total-cases-dropped">Total cases dropped:</span> <span id="case2TotNum" class="numBox">0</span></span>
                   <span class="totStatBox" id="skinTot"><span id="stats-general-total-skins-dropped">Total skins dropped:</span> <span id="skinTotNum" class="numBox">0</span></span>
                   <span class="totStatBox" id="grafTot"><span id="stats-general-total-graffiti-dropped">Total graffiti dropped:</span> <span id="grafTotNum" class="numBox">0</span></span>
