--- a/css/statsDialog.css
+++ b/css/statsDialog.css
@@ -69,8 +69,7 @@ input:checked + span {
 
 /* Chart */
 .number_chart {
-  width:100%;
-  max-width:1000px;
+  width: calc(100%-1em);
 
   padding: 1em;
   margin: 1em;
