removed steam_filter_hide_class

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -67,7 +67,7 @@
           Statistics
         </span>
       </span>
-      <span class="steam_filter_Options_Win_Dismiss">
+      <span id="steam_Inv_His_toolbar_filterOptions" class="steam_filter_Options_Win_Dismiss">
         <svg class="bigger_icon" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="5cm" height="4.615cm" viewBox="0 0 141.732 130.805">
           <defs>
             <linearGradient id="iconGradient" gradientTransform="rotate(90)">
@@ -110,13 +110,13 @@
 
       
     </div>
-    <div id="modal_bottom_bar" class="steam_filter_hide_class modal_top_bar"></div>
+    <div id="modal_bottom_bar" hidden class="modal_top_bar"></div>
   </div>
 </div>
 
 
 <!-- Simple Search -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_simple_searchbar">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_simple_searchbar">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div id="steam_filter_simple_searchbar_win">
       <h3 id="modal-title-simpleSearch" class="list-Title">Search Engine</h3>
@@ -143,7 +143,7 @@
 </div>
 
 <!-- Filter Options V2 -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_Options">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_Options">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -237,7 +237,7 @@
 </div>
 
 <!-- Advanced -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_advanced">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_advanced">
   <div class="steam_inv_filter_modal_advanced newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -1146,7 +1146,7 @@
 </div>
 
 <!-- Stats -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_stats">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_stats">
   <div id="steam_filter_stats_modal" class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -1214,7 +1214,7 @@
 </div>
 
 <!-- Loading Screen -->
-<div class="steam_filter_hide_class" id="steam_filter_loading_screen">
+<div hidden id="steam_filter_loading_screen">
   <div class="newmodal steam_inv_filter_modal">
     <div id="steam_filter_loading_icon" class="waiting_dialog_throbber newmodal"></div>
   </div>
@@ -1222,7 +1222,7 @@
 </div>
 
 <!-- Default options Dialog -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_options_Dialog">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_options_Dialog">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -1248,7 +1248,7 @@
 </div>
 
 <!-- Default Alert Dialog -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_alert_Dialog">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_alert_Dialog">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -1270,7 +1270,7 @@
 </div>
 
 <!-- Loading History Dialog -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="Loading_For_Rows_Dialog">
+<div hidden class="steam_filter_dialog_group" id="Loading_For_Rows_Dialog">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
