--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -1,13 +1,12 @@
+<div hidden id="languageNotSupportedWindow">
+  <h3><span id="current_Language_that_is_not_supported"></span> is not fully supported</h3>
+  <p>The following features will be unavailable:</p>
+  <ul>
+    <li>Correct history language</li>
+    <li></li>
+  </ul>
+</div>
 <div id="steam_Inv_His_Filter_Window">
-  <div id="languageNotSupportedWindow">
-    <h3><span id="current_Language_that_is_not_supported"></span> is not supported</h3>
-    <p>The following features will be unavailable:</p>
-    <ul>
-      <li>Filters</li>
-      <li></li>
-    </ul>
-  </div>
-  <br>
   <div id="steam_Inv_His_Toolbar">
     <div class="modal_top_bar"></div>
     <div id="steam_Inv_His_Toolbar_Icons">
