progress on advanced filter

--- a/css/filterOptionsDialog.css
+++ b/css/filterOptionsDialog.css
@@ -154,7 +154,7 @@ button {
 .selected:hover {
   background: linear-gradient(to right, #4bdbff, #537eff) !important;
 }
-li {
+#steam_filter_Options li {
   cursor: pointer;
 }
 
