--- a/css/advancedOptionsDialog.css
+++ b/css/advancedOptionsDialog.css
@@ -3,6 +3,160 @@
   max-width: 955px !important;
 }
 
+/* boxes */
+#advanced_filter_window .aFilter_boxes {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: fit-content;
+}
+#advanced_filter_window .aFilter_boxes_container {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#advanced_filter_window .aFilter_container {
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.1;
+
+  background-color: #32363f;
+  padding: 0.8em;
+  border-radius: 0.4em;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  display: flex;
+  gap: 1em;
+  flex-direction: column;
+  
+  flex: 0 1 calc(100%);
+  margin: 5px;
+  max-width: 175px;
+}
+
+
+#advanced_filter_window .checkbox-container {
+  display: flex;
+  flex-direction: row;
+}
+#advanced_filter_window .checkbox-container span {
+  margin-left: 0.5em;
+}
+
+#advanced_filter_window .input-select[type="checkbox"] {
+  margin-bottom: 1.6em;
+}
+#advanced_filter_window .input-select[type="checkbox"]::before {
+  content: "Open";
+  width: calc(100%-0.4em);
+  height: 1.15em;
+  background-color: #2c313b;
+  border-radius: 0.3em;
+  display: block;
+  padding: 0.2em;
+
+  text-align: center;
+  font-weight: bold;
+  color: #b1b1b1;
+  cursor: pointer;
+  
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.1;
+  
+  border-radius: 6px;
+
+  padding: 8px;
+
+  font-size: medium;
+  border: 0;
+  box-shadow: 2px 2px 7px #00000045;
+}
+#advanced_filter_window .input-select[type="checkbox"]:checked::before {
+  content: "Close";
+  background-color: #303540;
+}
+#advanced_filter_window .input-select[type="checkbox"]:checked + .input-options {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  position: fixed;
+  background-color: #2c313b;
+  padding: 1em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  border-radius: 0.25em;
+  box-shadow: 2px 2px 5px #00000035;
+  max-height: 300px;
+  overflow-y: auto;
+}
+#advanced_filter_window .input-options {
+  display: none;
+  transform: translateY(4.8em);
+}
+#advanced_filter_window #aFilter-search {
+  background-color: #2c313b;
+  box-shadow: inset 0 0 10px rgba(8, 8, 8, 0.3);
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+
+/* collections */
+#advanced_filter_window {
+  display: grid;
+  grid-template-columns: auto min-content;
+  grid-template-rows: 100%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+#advanced_filter_window .aFilter_collections_container {
+  grid-area: 1 / 2 / 2 / 3;
+}
+#advanced_filter_window .aFilter_collections {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+#advanced_filter_window .aFilter_collection {
+  background-color: #32363f;
+  padding: 1em;
+  border-radius: 8px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  margin: 6px;
+  
+  min-width: 150px;
+  max-width: 300px;
+  font-size: 1.3em;
+  height: min-content;
+}
+#advanced_filter_window .aFilter_collection .aFilter_data {
+  overflow-y: auto;
+  max-height: 60vh;
+}
+#advanced_filter_window .aFilter_collection .aFilter_data li {
+  list-style: none;
+}
+#advanced_filter_window .aFilter_collection .aFilter_data li::before {
+  content: "\2022";
+  margin-right: 5px;
+  font-weight: bold;
+}
+#aFilter_search {
+  text-align: center;
+  background: linear-gradient(to right, #00ccff, #3366ff);
+  color: white;
+  font-weight: bold;
+  padding-top: 0.6em !important;
+  padding-bottom: 0.6em !important;
+  cursor: pointer;
+}
+#aFilter_search:hover {
+  background: linear-gradient(to right, #2cd5ff, #4a77ff);
+  font-weight: bolder;
+}
+
+
+
+/* old (still in use) */
+#advanced_filter_window .aFilter_container .input-option[type="checkbox"],
 .econ_tag_filter_checkbox {
   appearance: none;
   background-color: #464d58;
@@ -20,6 +174,7 @@
   cursor: pointer;
 }
 
+#advanced_filter_window .aFilter_container .input-option[type="checkbox"]::before,
 .econ_tag_filter_checkbox::before {
   content: "";
   width: 1.15em;
@@ -29,56 +184,40 @@
   transition: 80ms transform ease-in-out;
   box-shadow: inset 1.2em 1.2em #00c0f0;
 }
+#advanced_filter_window .aFilter_container .input-option[type="checkbox"]:checked::before,
 .econ_tag_filter_checkbox:checked::before {
   transform: scale(1);
 }
 
-.econ_tag_filter_container {
-  font-size: 1rem;
-  font-weight: bold;
-  line-height: 1.1;
-  display: grid;
-  grid-template-columns: 1em auto;
-  gap: 0.5em;
-  margin-top: 0.5em;
-}
-
-.econ_tag_filter_category_label {
+#advanced_filter_window h4 {
   font-size: 1.1rem !important;
   font-weight: bold;
   line-height: 1.1;
 }
 
-.econ_tag_filter_category {
-  background-color: #32363f;
-  padding: 0.8em;
-  border-radius: 0.4em;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.econ_tag_filter_category select {
+#advanced_filter_window .aFilter_container select {
   font-size: 1rem;
   font-weight: bold;
   line-height: 1.1;
-  background-color: #32363f !important;
+  background-color: #2c313b;
   
   border-radius: 6px !important;
 
-  padding: 2px;
+  padding: 8px;
 
   font-size: medium;
   border: 0 !important;
-  box-shadow: inset 0 0 10px rgba(8, 8, 8, 0.3) !important; 
+  box-shadow: inset 0 0 10px rgba(8, 8, 8, 0.3); 
 }
 
-.econ_tag_filter_category select option {
+#advanced_filter_window .aFilter_container select option {
   font-size: 1rem;
   line-height: 1.1;
-  background-color: #32363f !important;
+  background-color: #2c313b;
   
   border-radius: 6px !important;
 
-  padding: 2px;
+  padding: 8px;
 
   font-size: medium;
   border: 0 !important;
