almost done with aFilter Search

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -250,7 +250,7 @@
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
       <div class="newmodal_header">
-        <div class="newmodal_close steam_filter_advanced_win_dismiss" data-panel="{&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"></div>
+        <div id="steam_filter_advanced_win_dismiss" class="newmodal_close steam_filter_advanced_win_dismiss" data-panel="{&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"></div>
         <div id="steam_filter_advanced_win_title_text" class="title_text">Advanced Filter</div>
       </div>
     </div>
